--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,21 @@ body {
 .col {
     float: left;
 }
+
+.button {
+    font-family: Roboto;
+    font-size: 12px;
+    color: white;
+    text-transform: uppercase;
+    padding: 5px 20px;
+    background-color: #0c325a;
+    border: 1px solid white;
+    border-radius: 3px;
+}
+
+.button.green {
+    background-color: #7cbb05;
+}
 /* END COMMON  */
 
 /* HEADER  */
@@ -37,20 +52,49 @@ header {
     height: 550px;
     margin: auto;
     padding: 10px;
+    position: relative;
 }
 
+.col-left {
+    margin-right: 50px;
+}
 /* navbar  */
+
+.col-center {
+    margin-top: 15px;
+}
+
 li {
     display: inline-block;
     list-style-type: none;
+    padding-left: 15px;
 }
 
 li a {
+    color: white;
     text-decoration: none;
     text-transform: uppercase;
+    font-size: 12px;
+}
+
+.col-right {
+    float: right;
+    margin-top: 12px;
 }
 /* end navbar  */
 
+.title-container {
+    width: 50%;
+    color: white;
+    position: absolute;
+    bottom: 20%;
+    left: 0px;
+}
+
+.big-button {
+    margin-top: 30px;
+    padding: 20px;
+}
 /* END HEADER  */
 
 /* MAIN  */
