--- a/css/style.css
+++ b/css/style.css
@@ -41,11 +41,22 @@ body {
 }
 
 .main-columns {
-    width: 30%;
+    width: 33%;
     text-align: center;
     float: left;
 }
 
+.col-image {
+    margin: 30px auto;
+    height: 215px;
+    width: 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.green-text {
+    color: #7ebc08;
+}
 /* END COMMON  */
 
 /* HEADER  */
@@ -125,28 +136,15 @@ li a {
 }
 
 .left-col-image {
-    margin: 30px auto;
-    height: 215px;
-    width: 100%;
     background-image: url(../img/profile.svg);
-    background-repeat: no-repeat;
 }
 
 .center-col-image {
-    margin: 30px auto;
-    height: 215px;
-    width: 100%;
     background-image: url(../img/computer.svg);
-    background-repeat: no-repeat;
 }
 
 .right-col-image {
-    margin: 30px auto;
-    height: 199px;
-    width: 100%;
     background-image: url(../img/doc.svg);
-    background-repeat: no-repeat;
-
 }
 
 /* end main columns  */
